--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link href="assets/css/style.css?v=1675738853578" rel="stylesheet" />
     <link href="assets/css/form.min.css?v=10" rel="stylesheet" />
     <title>IWantSeats</title>
     <link
@@ -65,12 +66,12 @@
             />
             <i class="uil uil-dizzy-meh"></i>
           </div>
-          <button class="btn signup" id="btn_login">Login</button>
+          <button class="btn signup fs-4" id="btn_login">Login</button>
 
           <div class="ask">
             <p>Not have an account? <a href="signup.html">Signup</a></p>
             <p>
-              Forgot password? Click
+              Need Help? Reset Password
               <a href="#" onclick="openForgot()">here</a>
             </p>
           </div>
@@ -82,15 +83,49 @@
         <center>
           <p>&copy; 2022 - 2023 - iWantSeats 10</p>
           <div class="privacy">
-            <a href="#">Terms and Conditions</a>
-            <a href="#">Privacy policy</a>
+            <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-terms">Terms and Conditions</a>
+            <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-policy">Privacy policy</a>
           </div>
         </center>
       </div>
     </footer>
-    <script rel="script" src="assets/js/app.min.js?v=10"></script>
+  
+    <div id="modal-policy" class="modal fade" role="dialog" tabindex="-1">
+      <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+          <div class="modal-header p-3">
+            <h3 class="modal-title">Privacy Policy</h3>
+            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div w3-include-html="policy.html"></div>
+          </div>
+          <div class="modal-footer d-flex justify-content-center p-3">
+            <button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="modal-terms" class="modal fade" role="dialog" tabindex="-1">
+      <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+          <div class="modal-header p-4">
+            <h3 class="modal-title">Terms and Conditions</h3>
+            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div w3-include-html="terms.html"></div>
+          </div>
+          <div class="modal-footer d-flex justify-content-center p-3">
+            <button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script rel="script" src="assets/swal/sweetalert2.all.js"></script>
     <script rel="script" src="assets/js/jquery.min.js"></script>
+    <script rel="script" src="assets/js/app.js?v=1675748039008"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script rel="script" src="assets/js/axios.min.js"></script>
 
     <script>
@@ -111,7 +146,7 @@
 
       async function openForgot() {
         Swal.fire({
-          title: "FORGOT PASSWORD",
+          title: "RESET PASSWORD",
           input: "email",
           inputLabel: "Enter your email address",
           inputPlaceholder: "Enter email address",
@@ -131,11 +166,11 @@
                 let data = {
                   email: result.value,
                 };
-                let input = `https://iwsenterprise.com/iwsticketing_v3/iwsapiengine/sendonlinedetails`;
+                let input = `https://iwsenterprise.com/squareone/iws10_resetpass`;
                 let res = await axios.post(input, data, axiosConfig);
-                if (res.data.RESULT === "EMAILSENT") {
+                if (res.data.RESULT === "SAVED") {
                   Swal.fire(
-                    "Success.. Please check your email.",
+                    "Success.. Please check your email to reset your password",
                     "",
                     "success"
                   );
