--- a/terms.html
+++ b/terms.html
@@ -157,7 +157,7 @@
     You agree that you will not under any circumstances:
 </p>
 
-<ul>
+<ul class="fs-4">
     <li>
         access the Service for any reason other than your
         personal, non-commercial use solely as permitted by the normal
