--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible" />
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<!-- link css -->
-	<link href="assets/css/style.min.css?v=10" rel="stylesheet" />
+	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+	<link href="assets/css/style.css?v=1675738853578" rel="stylesheet" />
 	<link href="assets/css/form.min.css?v=10" rel="stylesheet" />
 	<title>IWantSeats</title>
 	<link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png" />
@@ -14,6 +15,25 @@
 
 	<!-- unicons -->
 	<link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
+	<style>
+		.annouce {
+			z-index: 99;
+			background-color: rgba(124, 173, 62, 0.56);
+			margin-top: 80px;
+		}
+
+		@media screen and (max-width: 992px) {
+			.annouce {
+				margin-top: 57px;
+			}
+		}
+		@media screen and (max-width: 601px) {
+			.annouce {
+				margin-top: 86px;
+			}
+		}
+
+</style>
 </head>
 
 <body>
@@ -35,6 +55,11 @@
 	</header>
 
 	<main>
+		<div class="w-100 position-absolute px-1 py-4 text-center annouce px-md-5">
+				<h4 class="text-white">Welcome to the new iWantSeats version 10! You may book here or switch to the <a style="text-decoration: none;" class="text-white" href="https://www.iwantseats.com/">old
+					version</a>, whichever is convenient. We appreciate your feedback.<br/> Please feel free to email us at
+					<a class="text-white" style="text-decoration: none;" href="mailto:notifications@iwantseats.com">notifications@iwantseats.com</a></h4>					
+		</div>
 		<div class="banner">
 			<div class="container">
 				<div class="typo">
@@ -86,11 +111,11 @@
 						<label for="date_of_departure">Travel Date</label>
 						<div class="input">
 							<input id="date_of_departure" onchange="this.className=(this.value!=''?'has-value':'')"
-								required type="date" />
-							<i class="uil uil-calendar-alt"></i>
+								required type="date" onfocus="this.showPicker()" />
+							<label for="date_of_departure"><i class="uil uil-calendar-alt"></i></label>
 						</div>
 					</div>
-					<div class="search-fild">
+					<!-- <div class="search-fild">
 						<div class="flex">
 							<label for="date_of_return">Return Date</label>
 							<input id="chkReturn" type="checkbox" />
@@ -100,7 +125,7 @@
 								onchange="this.className=(this.value!=''?'has-value':'')" type="date" />
 							<i class="uil uil-calendar-alt"></i>
 						</div>
-					</div>
+					</div> -->
 					<button class="btn-primary search-btn" id="btn_search">
 						<i class="uil uil-search"></i> Search
 					</button>
@@ -108,12 +133,12 @@
 			</form>
 		</div>
 	</main>
-
+<!-- 
 	<section class="break">
 		<div class="container">
 			<h3>Over 3 million passengers served to provide travel convenience</h3>
 		</div>
-	</section>
+	</section> -->
 	<!-- logo section -->
 	<section class="sp">
 		<div class="container">
@@ -455,7 +480,7 @@
 				</div>
 				<textarea id="" required name="message" placeholder="Type your message...."></textarea>
 
-				<button class="btn signup" type="submit">
+				<button class="btn signup fs-4" type="submit">
 					Send <i class="uil uil-message"></i>
 				</button>
 			</form>
@@ -466,39 +491,75 @@
 			<center>
 				<p>&copy; 2022 - 2023 - iWantSeats 10</p>
 				<div class="privacy">
-					<a class="trigger" href="javascript:;">Terms and Conditions</a>
-					<a class="trigger1" href="javascript:;">Privacy policy</a>
+					<a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-terms">Terms and Conditions</a>
+					<a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-policy">Privacy policy</a>
 				</div>
 			</center>
 		</div>
 	</footer>
 
-	<div id="policy" class="modal">
-		<div class="modal-content">
-			<div class="modal-header">
-				<span class="close-button" id="pClose" style="font-size: large;">×</span>
-				<h1><strong>Privacy Policy</strong></h1>
-
-			</div>
-			<div class="modal-body">
-				<div w3-include-html="policy.html"></div>
-			</div>
-
-		</div>
-	</div>
-
-	<div id="terms" class="modal">
-		<div class="modal-content">
-			<div class="modal-header">
-				<span class="close-button" id="tClose" style="font-size: large;">×</span>
-				<h1><strong>Terms and Conditions</strong></h1>
-
-			</div>
-			<div class="modal-body">
-				<div w3-include-html="terms.html"></div>
+	<div id="modal-policy" class="modal fade" role="dialog" tabindex="-1">
+		<div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
+			<div class="modal-content">
+				<div class="modal-header p-3">
+					<h3 class="modal-title">Privacy Policy</h3>
+					<button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div w3-include-html="policy.html"></div>
+				</div>
+				<div class="modal-footer d-flex justify-content-center p-3">
+					<button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
+				</div>
 			</div>
 		</div>
 	</div>
+	<div id="modal-terms" class="modal fade" role="dialog" tabindex="-1">
+		<div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
+			<div class="modal-content">
+				<div class="modal-header p-4">
+					<h3 class="modal-title">Terms and Conditions</h3>
+					<button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div w3-include-html="terms.html"></div>
+				</div>
+				<div class="modal-footer d-flex justify-content-center p-3">
+					<button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="modal-resetpass" class="modal fade" role="dialog" tabindex="-1" data-bs-backdrop="static"
+		data-bs-keyboard="false">
+		<div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Reset Password</h4><button class="btn-close" type="button"
+						data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<form class="fs-4" id="formReset" onsubmit="ResetPass(event)"
+						oninput='cnewpass.setCustomValidity(cnewpass.value != newpass.value ? "Passwords do not match." : "")'>
+						<input type="hidden" id="fToken" value="">
+						<div class="mb-2"><label class="form-label">New Password</label>
+							<input name="newpass" id="newpass" autocomplete="off" class="form-control" required
+								type="password" />
+						</div>
+						<div><label class="form-label">Confirm Password</label>
+							<input autocomplete="off" name="cnewpass" id="cnewpass" class="form-control" required
+								type="password" />
+						</div>
+						<button class="d-none" type="submit" id="btnResetConfirm">submit</button>
+					</form>
+				</div>
+				<div class="modal-footer d-flex justify-content-center"><button class="btn btn-primary fs-5"
+						type="button" onclick="$('#btnResetConfirm').click();">CONFIRM</button></div>
+			</div>
+		</div>
+	</div>
+
 	<script>
 		function addElement(el, url) {
 			let element = document.createElement(el);
@@ -511,17 +572,29 @@
 				document.body.appendChild(element);
 			}
 		}
+
+
+
+		// $('#formReset').on('submit', function (e) {
+		// 	e.preventDefault();
+		// 	alert('reset');
+		// });
+
+
 	</script>
 	<script rel="script" src="assets/js/jquery.min.js?v=10"></script>
+	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<script rel="script" src="assets/js/axios.min.js"></script>
-	<script rel="script" src="assets/swal/sweetalert2.min.js?v=10"></script>
-	<script rel="script" src="assets/js/loadingoverlay.min.js?v=10"></script>
-	<script rel="script" src="assets/js/lodash.min.js?v=10"></script>
+	<script rel="script" src="assets/js/lodash.min.js"></script>
+	<script rel="script" src="assets/swal/sweetalert2.min.js"></script>
+	<script rel="script" src="assets/js/loadingoverlay.min.js"></script>
+	<!-- <script rel="script" src="assets/js/main.js?v=1675728304197"></script> -->
 	<script>
-		addElement("script", "assets/js/main.js");
-		addElement("script", "assets/js/modal.js");
-		addElement("link", "assets/css/modal.css");
+		// addElement("script", "assets/js/modal.js");
+		// addElement("link", "assets/css/modal.css");
 		addElement("script", "assets/js/app.js");
+		addElement("script", "assets/js/main.js");
+
 
 		$("#chkReturn").change(function () {
 			if (this.checked) {
@@ -530,7 +603,41 @@
 				);
 			}
 		});
+
+		const ResetPass = async (e) => {
+			e.preventDefault();
+			let fToken = $('#fToken').val();
+			let data = {
+				email: fToken.split(':')[0],
+				token: fToken.split(':')[1],
+				newpassword: $('#newpass').val()
+			};
+			console.log('data', data);
+
+			let input = `https://iwsenterprise.com/squareone/iws10_confirmresetpass`;
+			let res = await axios.post(input, data, axiosConfig);
+			if (res.data.RESULT === "SAVED") {
+				await Swal.fire(
+					"Sucess",
+					"Your password has been changed successfully.",
+					"success"
+				).then(function () {
+					$("#formReset").trigger("reset");
+					window.location = "./";
+				});
+			} else {
+				Swal.fire("Failed..", "", "Oops.. Something occurred.");
+				console.log("response", res);
+			}
+
+		}
+
+		$("#modal-resetpass").on('hide.bs.modal', function () {
+			window.location = "./";
+		});
+
 	</script>
+
 </body>
 
 </html>
