--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 		}
 		@media screen and (max-width: 601px) {
 			.annouce {
-				margin-top: 86px;
-			}
+				margin-top: 75px;
+			};
 		}
+
 
 </style>
 </head>
@@ -55,8 +56,8 @@
 	</header>
 
 	<main>
-		<div class="w-100 position-absolute px-1 py-4 text-center annouce px-md-5">
-				<h4 class="text-white">Welcome to the new iWantSeats version 10! You may book here or switch to the <a style="text-decoration: none;" class="text-white" href="https://www.iwantseats.com/">old
+		<div class="w-100 position-absolute px-2 py-4 text-center annouce px-md-5">
+				<h4 class="text-white s-announce">Welcome to the new iWantSeats version 10! You may book here or <a style="text-decoration: none;" class="text-white" href="https://www.iwantseats.com/">switch to the old
 					version</a>, whichever is convenient. We appreciate your feedback.<br/> Please feel free to email us at
 					<a class="text-white" style="text-decoration: none;" href="mailto:notifications@iwantseats.com">notifications@iwantseats.com</a></h4>					
 		</div>
@@ -582,20 +583,15 @@
 
 
 	</script>
-	<script rel="script" src="assets/js/jquery.min.js?v=10"></script>
+	<script rel="script" src="assets/js/jquery.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<script rel="script" src="assets/js/axios.min.js"></script>
 	<script rel="script" src="assets/js/lodash.min.js"></script>
 	<script rel="script" src="assets/swal/sweetalert2.min.js"></script>
 	<script rel="script" src="assets/js/loadingoverlay.min.js"></script>
-	<!-- <script rel="script" src="assets/js/main.js?v=1675728304197"></script> -->
+	<script async rel="script" src="assets/js/app.js?v=1675843841740"></script>
+	<script async rel="script" src="assets/js/main.js?v=1675843841740"></script>
 	<script>
-		// addElement("script", "assets/js/modal.js");
-		// addElement("link", "assets/css/modal.css");
-		addElement("script", "assets/js/app.js");
-		addElement("script", "assets/js/main.js");
-
-
 		$("#chkReturn").change(function () {
 			if (this.checked) {
 				Swal.fire(
