--- a/user-admin.html
+++ b/user-admin.html
@@ -207,14 +207,12 @@
     <script rel="script" src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script rel="script" src="assets/js/axios.min.js"></script>
-    <script rel="script" src="assets/js/table.min.js?v=10"></script>
-    <script rel="script" src="assets/js/moment.min.js?v=10"></script>
-    <script rel="script" src="assets/js/main.js?v=1775297651996"></script>
+    <script rel="script" src="assets/js/table.min.js"></script>
+    <script rel="script" src="assets/js/moment.min.js"></script>
+    <script rel="script" src="assets/js/app.js?v=1675843841740"></script>
+    <script rel="script" src="assets/js/main.js?v=1675843841740"></script>
 
     <script>
-        addElement("script", "assets/js/modal.js");
-        addElement("link", "assets/css/modal.css");
-        addElement("script", "assets/js/app.js");
 
         $(document).ready(() => {
             let token = localStorage.getItem("TOKEN");
