--- a/booking.html
+++ b/booking.html
@@ -16,13 +16,21 @@
     <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
     <title>IWantSeats</title>
     <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png">
+    <style>
+        .modal.fade {
+            z-index: 10000000 !important;
+        }
+    </style>
 </head>
 
 <body>
     <header>
         <div class="container-max">
-            <div class="logo" onclick="window.open('./', '_self')">
-                <img alt="" src="assets/images/logo-black.png" />
+            <div class="logo">
+                <a class="navbar-brand" href="./">
+                    <img src="assets/images/logo.png" style="width: 40px; height: 40px;" />
+                    <img src="assets/images/logo-black-copy.png" style="width: 144px;" />
+                </a>
             </div>
             <div class="links">
                 <a href="./" onclick="menu()">Home</a>
@@ -318,7 +326,7 @@
                                         hours.
                                     </p>
                                     <br />
-                                    <button class="btn btn-primary proof-btn" data-target="bank-proof">
+                                    <button class="btn btn-primary proof-btn fs-4" data-target="bank-proof">
                                         Payment Proof
                                     </button>
                                 </center>
@@ -350,7 +358,7 @@
                                             Reservation Number
                                         </p>
                                         <br /><br />
-                                        <button class="btn btn-primary">Submit</button>
+                                        <button class="btn btn-primary fs-4">Submit</button>
                                     </form>
                                 </center>
                             </div>
@@ -365,11 +373,49 @@
                     <div class="reserveBox" style="text-align: center; display: none">
                         <p class="text-center" style="padding: 10px;background-color: #7cad3e;border-radius: 7px;">
                             Reservation No: <span id="reservationNo"
-                                style="text-decoration: underline; color: var(--black); font-weight: 600; "></span>
+                                style="text-decoration: underline; color: whitesmoke; font-weight: 600; "></span>
                         </p>
                     </div>
                     <div class="block bus-seat-select">
                         <h3 class="title">Choose Seat</h3>
+                        <div class="block fs-5 p-1">
+
+                            <div class="table-responsive">
+                                <table class="table table-borderless table-sm">
+                                    <thead>
+                                        <tr>
+                                            <td colspan="6" class="text-center">
+                                                SEAT CATEGORIES
+                                            </td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td style="width: 30px;">
+                                                <div class="seat available">
+                                                    <img alt="" src="assets/images/chair.svg">
+                                                </div>
+                                            </td>
+                                            <td class="align-middle">Available</td>
+                                            <td style="width: 30px;">
+                                                <div class="seat available senior">
+                                                    <img alt="" src="assets/images/chair.svg">
+                                                </div>
+                                            </td>
+                                            <td class="align-middle">SERNIOR/PWD</td>
+                                            <td style="width: 30px;">
+                                                <div class="seat unavailable booked">
+                                                    <img alt="" src="assets/images/chair.svg">
+                                                </div>
+                                            </td>
+                                            <td class="align-middle">Reserved</td>
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
                         <div class=" bus-body table-responsive">
                         </div>
                     </div>
@@ -437,10 +483,12 @@
                                     <td style="width: 30px;background-color: white;"><input id="terms_policy"
                                             type="checkbox" class="form-check-input"></td>
                                     <td style="background-color: white;">
-                                        <label for="terms_policy" class="fs-4">I agree to <a data-bs-toggle="modal" data-bs-target="#modal-terms"
+                                        <label for="terms_policy" class="fs-4">I agree to <a data-bs-toggle="modal"
+                                                data-bs-target="#modal-terms"
                                                 style="color: var(--secoundary); font-size: 1.6rem;"
                                                 href="javascript:;">Terms and
-                                                Conditions</a> & <a data-bs-toggle="modal" data-bs-target="#modal-policy" href="javascript:;"
+                                                Conditions</a> & <a data-bs-toggle="modal"
+                                                data-bs-target="#modal-policy" href="javascript:;"
                                                 style="color: var(--secoundary); font-size: 1.6rem;">Privacy
                                                 Policy</a></label>
                                     </td>
@@ -617,11 +665,11 @@
     <script rel="script" src="assets/js/lodash.min.js"></script>
     <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
+    <script async rel="script" src="assets/js/app.js?v=1675843841740"></script>
+    <script async rel="script" src="assets/js/booking.js?v=1675843841740"></script>
+    <script async rel="script" src="assets/js/main.js?v=1675843841740"></script>
 
     <script>
-        addElement('script', 'assets/js/app.js');
-        addElement('script', 'assets/js/booking.js');
-        addElement('script', 'assets/js/main.js');
         $("#chkReturn").change(function () {
             if (this.checked) {
                 Swal.fire('Roundtrip search is not available at this time. You may book roundtrip tickets separately. Thank you.')
@@ -637,6 +685,10 @@
                 continueBtn.classList.remove("active");
             };
         });
+
+
+
+
 
     </script>
 </body>
