--- a/joybus.html
+++ b/joybus.html
@@ -290,6 +290,6 @@
     </div>
 </footer>
 
-<script src="assets/js/app.min.js?v=10"></script>
+<script src="assets/js/app.min.js?v=1675815088186"></script>
 </body>
 </html>
