--- a/signup.html
+++ b/signup.html
@@ -183,8 +183,8 @@
 </div>
 <script rel="script" src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script rel="script" src="assets/js/app.js?v=1675748039008"></script>
-<script rel="script" src="assets/swal/sweetalert2.min.js?v=10"></script>
+<script rel="script" src="assets/swal/sweetalert2.min.js"></script>
+<script rel="script" src="assets/js/app.js?v=1675843841740"></script>
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         let token = localStorage.getItem('TOKEN');
